--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <pre>Email     :<input type="email" placeholder="enter your email"></pre>
         <pre>Phone no  :<input type="number" placeholder="enter your number" size="10"></pre>
         <pre>Address   :<input type="address" placeholder="enter your address"></pre>
-        <pre>Gender    :<input type="radio">male</pre>
-        <pre>           <input type="radio">female</pre>
+        <pre>Gender    :<input type="radio" name="gender">male</pre>
+        <pre>           <input type="radio" name="gender">female</pre>
         <pre>income    :<input type="range">10 lakhs</pre>
         <pre>Nationality: <input type="text" placeholder="enter your country"></pre>
         <pre>state      :</pre><select name="state" >
